test/rbkt/Queries/zorba/error/warning1.xq
(:
 : test if the warning module is syntactically correct
 :)
import module namespace zwarn = "http://zorba.io/warnings";

$zwarn:ZWST0002
